# gpu_chatbot_test

./: .coverage  .dockerignore  .env  .env.sample  .gitignore  .gitlab-ci.yml  HANDOVER.md  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.backup  frontend-backend-mapping.md  seed_ui_demo.sql
backend/: .coverage  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev-insecure  README.md  alembic.ini  auto-migrate.sh  backup_requirements.txt  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025_08_22_1502-c8281c1ce2d4_init.py  2025_08_22_1503-ef0e27a04461_seed_data.py  2025_08_25_1439-532f328f3424_add_tools_history.py  2025_09_04_0959-17038bf1be51_alter_conversation_history.py  2026_01_10_1200-acde12345678_add_mcp_server_owner_public.py  2026_01_12_0900-6c2a0c7e9e2a_add_wiki_pages.py  2026_01_12_1000-b7f2c9a1d8e4_add_llm_api_keys.py  2026_01_12_1100-4b9f3a7d2c11_fix_collection_owner_id.py  2026_01_15_0300-8f1e9b4d2c3a_fix_system_user_email.py  (+1 more)
backend/app/: __init__.py  main.py
backend/app/core/: .env.sample  config.py
backend/tests/: README.md  __init__.py  conftest.py  test_auth_router.py  test_authz_module.py  test_chat_service_security.py  test_chat_stream_prompt.py  test_collection_atomicity.py  test_conversations_router.py  test_mcp_server_router.py  test_mcp_server_service.py  test_model_api_key_service.py  test_model_api_keys_router.py  test_rag_router.py  test_smoke.py  test_user_router.py  test_user_service.py  test_wiki_router.py
(+305 files in other folders)
